# mmd-regime-detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  scratch.py
notebooks/: demo.ipynb  demo.py
notebooks/experiments/: kernel_comparison.ipynb  kernel_comparison.py  window_comparison.ipynb  window_comparison.py
src/: features.py  mmd.py  plots.py
src/regime_detection/: __init__.py  data.py  features.py  plots.py
tests/: test_api.py
