[project]
name = "mmd-regime-detection"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "kernel-target-alignment",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "pykeops>=2.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "yfinance>=0.2.66",
]

[tool.uv.sources]
kernel-target-alignment = { git = "https://github.com/whitham-powell/kernel-target-alignment.git" }

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503"]
max-line-length = 88
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4"]
exclude = [".git", "__pycache__"]
