[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["regime_detection"]

[project]
name = "regime-detection"
version = "0.2.0" # Bumped for API refactor
description = "Market regime detection via Maximum Mean Discrepancy (MMD) with kernel methods"
authors = [{ name = "Elijah Whitham-Powell" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = [
    "kernel-methods",
    "mmd",
    "regime-detection",
    "finance",
    "time-series",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "yfinance>=0.2.0",
    "kernel-target-alignment @ git+https://github.com/whitham-powell/kernel-target-alignment.git",
]

[project.urls]
Homepage = "https://github.com/whitham-powell/regime-detection"
Repository = "https://github.com/whitham-powell/regime-detection"
Issues = "https://github.com/whitham-powell/regime-detection/issues"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "jupytext>=1.16.0",
    "nbconvert>=7.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "jupytext>=1.16.0",
    "nbconvert>=7.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
log_cli = true
log_cli_level = "DEBUG"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503"]
max-line-length = 88
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4"]
exclude = [".git", "__pycache__"]
